force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/IF_SFDC_CRCT_REQ_CENTER_INFO__c.object-meta.xml
<CustomObject>
    <label>IF SFDC CRCT REQ CENTER INFO</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>