force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crabldt__c.field-meta.xml
<CustomField>
    <fullName>crabldt__c</fullName>
    <label>crabldt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>