force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/craddr__c.field-meta.xml
<CustomField>
    <fullName>craddr__c</fullName>
    <label>craddr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>