force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crcapat__c.field-meta.xml
<CustomField>
    <fullName>crcapat__c</fullName>
    <label>crcapat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>