force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crchcnt__c.field-meta.xml
<CustomField>
    <fullName>crchcnt__c</fullName>
    <label>crchcnt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>