force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crfaxno__c.field-meta.xml
<CustomField>
    <fullName>crfaxno__c</fullName>
    <label>crfaxno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>