force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crhome__c.field-meta.xml
<CustomField>
    <fullName>crhome__c</fullName>
    <label>crhome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>