force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crname__c.field-meta.xml
<CustomField>
    <fullName>crname__c</fullName>
    <label>crname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>