force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crpausebegindt__c.field-meta.xml
<CustomField>
    <fullName>crpausebegindt__c</fullName>
    <label>crpausebegindt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>