force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crpauseenddt__c.field-meta.xml
<CustomField>
    <fullName>crpauseenddt__c</fullName>
    <label>crpauseenddt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>