force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/Crrepname__c.field-meta.xml
<CustomField>
    <fullName>Crrepname__c</fullName>
    <label>Crrepname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>