force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crtelno__c.field-meta.xml
<CustomField>
    <fullName>crtelno__c</fullName>
    <label>crtelno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>