force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/crtypename__c.field-meta.xml
<CustomField>
    <fullName>crtypename__c</fullName>
    <label>crtypename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>