force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/datastdrdt__c.field-meta.xml
<CustomField>
    <fullName>datastdrdt__c</fullName>
    <label>datastdrdt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>