force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/la__c.field-meta.xml
<CustomField>
    <fullName>la__c</fullName>
    <label>la</label>
    <length>255</length>
    <type>Text</type>
</CustomField>