force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/lo__c.field-meta.xml
<CustomField>
    <fullName>lo__c</fullName>
    <label>lo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>