force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/sidoname__c.field-meta.xml
<CustomField>
    <fullName>sidoname__c</fullName>
    <label>sidoname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>