force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/sigunguname__c.field-meta.xml
<CustomField>
    <fullName>sigunguname__c</fullName>
    <label>sigunguname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>