force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/stcode__c.field-meta.xml
<CustomField>
    <fullName>stcode__c</fullName>
    <label>stcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>