force-app/main/default/objects/IF_SFDC_CRCT_REQ_CENTER_INFO__c/fields/zipcode__c.field-meta.xml
<CustomField>
    <fullName>zipcode__c</fullName>
    <label>zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>